--- a/adminDashboard.html
+++ b/adminDashboard.html
@@ -24,19 +24,7 @@
                 </li>
                 <li>
                     <i class="fas fa-user"></i>
-                    <a href="datauser.html">Data User</a>
-                </li>
-                <li>
-                    <i class="fas fa-database"></i>
-                    <a href="datapeserta.html">Data Peserta</a>
-                </li>
-                <li>
-                    <i class="fas fa-graduation-cap"></i>
-                    <a href="datamateri.html">Data Materi</a>
-                </li>
-                <li class="logout"> 
-                    <i class="fas fa-sign-out-alt"></i>
-                    <a href="index.html">Log out</a>
+                    <a href="datauser.html">Testimoni</a>
                 </li>
             </ul>
         </nav>
