--- a/course.html
+++ b/course.html
@@ -34,8 +34,6 @@
                 <div></div>
                 <a href="course.html">Course</a>
                 <div></div>
-                <a href="aboutus.html">About Us</a>
-                <div></div>
                 <div class="hamburgerLogin">
                     <a href="login.html">Log In</a>
                 </div>
@@ -58,10 +56,10 @@
     <!-- Course Section -->
 
     <div class="course" data-aos="fade-up" data-aos-duration="3000">
-        <a href="courseuiux.html" class="itemCourse"></a>
-        <a href="coursefe.html" class="itemCourse"></a>
-        <a href="coursebe.html" class="itemCourse"></a>
-        <a href="courseda.html" class="itemCourse"></a>
+        <a href="#" class="itemCourse"></a>
+        <a href="#" class="itemCourse"></a>
+        <a href="#" class="itemCourse"></a>
+        <a href="#" class="itemCourse"></a>
     </div>
 
 
