--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a href="course.html" class="itemMenu">Course</a>
         </div>
         <div class="itemLogin">
-            <a href="login.html">Log In</a>
+            <a href="adminDashboard.html">Admin</a>
         </div>
 
         <!-- Hamburger Button -->
@@ -31,11 +31,11 @@
             <img src="img/Open.png" alt="Open" onclick="openNav()">
             <div class="hamburgerBtn" id="sideNav">
                 <img src="img/Close.png" alt="Close" class="closeBtn" onclick="closeNav()">
-                <a href="index.html">Home</a>
+                <a href="#">Home</a>
                 <div></div>
-                <a href="course.html">Course</a>
+                <a href="#">Course</a>
                 <div></div>
-                <a href="aboutus.html">About Us</a>
+                <a href="#">About Us</a>
                 <div></div>
                 <div class="hamburgerLogin">
                     <a href="login.html">Log In</a>
@@ -105,51 +105,7 @@
                             puas banget sama kerjaan 😍</p>
                     </div>
                 </div>
-                <div class="testimonials">
-                    <div class="alumniProfile">
-                        <img src="img/Alumni 2.png" alt="Avatar">
-                        <div class="alumniProfile-title">
-                            <h3>Satya Maulana</h3>
-                            <p>Back End Developer di BlueTech Labs</p>
-                        </div>
-                    </div>
-                    <div class="alumniExperience">
-                        <p>Setelah ambil kelas Back End Dev di EduNine, bener-bener 
-                            membantu saya banget dalam berbicara dengan lebih percaya 
-                            diri kepada tim teknis saya. Saya merasa lebih berdaya dalam 
-                            proyek dan memahami batasan teknologi yang di hadapi</p>
-                    </div>
-                </div>
-                <div class="testimonials">
-                    <div class="alumniProfile">
-                        <img src="img/Alumni 3.png" alt="Avatar">
-                        <div class="alumniProfile-title">
-                            <h3>Ahmad Rizal</h3>
-                            <p>Front End Developer di Crafters Inc.</p>
-                        </div>
-                    </div>
-                    <div class="alumniExperience">
-                        <p>Gue sih dulu gapaham coding, tapi setelah ikutin kursus di 
-                            EduNine, gue jadi bisa switch ke career yang lebih baik. 
-                            Sekarang bisa bikin website keren, dan yang lebih gila lagi, 
-                            gue diterima di perusahaan top buat jadi Front End Dev!</p>
-                    </div>
-                </div>
-                <div class="testimonials">
-                    <div class="alumniProfile">
-                        <img src="img/Alumni 4.png" alt="Avatar">
-                        <div class="alumniProfile-title">
-                            <h3>Putri Amelia</h3>
-                            <p>Data Analyst di Gojek</p>
-                        </div>
-                    </div>
-                    <div class="alumniExperience">
-                        <p>Selalu pengen jadi Data Analyst tapi bingung mulainya darimana, 
-                            tapi di EduNine helpful banget! Pemaparannya jelas, mentornya
-                            juga responsif, gratis juga yang penting haha! Makasih EduNine, 
-                            ga nyangka sih aku bisa kerja di Gojek sekarang ❤️‍🔥</p>
-                    </div>
-                </div>
+                
             </div>
             <div class="vector">
                 <img src="img/Plus.png" alt="plus" onclick="plusDivs(1)" class="plus" data-aos="flip-right">
