--- a/course.html
+++ b/course.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/course.css">
-    <title>Course - Capstone Project - Team E - Group 9</title>
+    <title>EduNine</title>
     <link rel="icon" type="img" href="img/edu9 logo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,7 +22,7 @@
             <a href="course.html" class="itemMenu">Course</a>
         </div>
         <div class="itemLogin">
-            <a href="login.html">Log In</a>
+            <a href="adminDashboard.html">Admin</a>
         </div>
 
         <!-- Hamburger Button -->
